--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.15.2",
     "lodash": "^4.17.4",
     "morgan": "^1.8.1",
+    "nodemon": "^1.11.0",
     "pg": "^6.1.4",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.2"
