--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "server/index.js",
   "scripts": {
     "start": "nodemon server/index.js",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "pseuyi <pseuyi@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.3",
     "body-parser": "^1.17.1",
     "compression": "^1.6.2",
     "express": "^4.15.2",
@@ -18,9 +20,16 @@
     "nodemon": "^1.11.0",
     "pg": "^6.1.4",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.30.2"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "sequelize": "^3.30.2",
+    "webpack": "^2.2.1"
   },
   "devDependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
     "nodemon": "^1.11.0"
   }
 }
