--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon server/index.js",
     "build": "webpack -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --watch test/*.js"
   },
   "author": "pseuyi <pseuyi@gmail.com>",
   "license": "ISC",
